fix too light colors on home sreen

--- a/src/layouts/main.sass
+++ b/src/layouts/main.sass
@@ -3,8 +3,10 @@ $noir: #444B53
 $grey: #e8e8e8
 $greySombre: #868686
 $light: #65BEC2
+$darkgreen: #006B70
 $medium: #6799B2
 $dark: #576D8E
+$darker: #2f3a4c
 
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro|Ubuntu|Dosis')
 
@@ -75,7 +77,7 @@ body, body>div, html
       font-weight: 400
       p
         @include police()
-        color: $dark
+        color: $darker
 
 
   nav
@@ -108,7 +110,7 @@ body, body>div, html
           text-align: center
           text-transform: uppercase
           white-space: nowrap
-          color: $dark
+          color: $darker
           border-style: solid
           border-width: 0px 0px 2px
           transition: border-color 0.1s, color 0.1s
@@ -128,7 +130,7 @@ body, body>div, html
       letter-spacing: 0.02em
       margin-bottom: 2.8em
       @include police()
-      color: $dark
+      color: $darker
       @media screen and ( max-height: 785px)
         margin-bottom: 1.8em
     .email
@@ -136,7 +138,7 @@ body, body>div, html
       //background: blue
       text-decoration: none
       color: currentColor
-      color: $light
+      color: $darkgreen
 
 
 
@@ -234,6 +236,13 @@ body, body>div, html
             font-size: 2em
             //letter-spacing: -0.05em
             //word-spacing: -0.38em
+            border-style: solid
+            border-width: 0px 0px 2px
+            transition: border-color 0.1s, color 0.1s
+            border-color: transparent
+            &:hover
+              color: $medium
+              border-color: $noir
             @media screen and (min-width: 320px)
               font-size: calc(16px + ((2 * (100vw - 320px)) / 320))
 
@@ -251,6 +260,7 @@ body, body>div, html
   right: 0px
   top: 0px
   z-index: 3
+  background: #fff
   @media screen and (min-width: 320px)
     padding-left: calc(24px + ((16 * (100vw - 320px)) / 1120))
     padding-right: calc(24px + ((16 * (100vw - 320px)) / 1120))
